optimizing file access